--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Diri</title>
+</head>
+<body>
+    <h1>Data Diri</h1>
+    <p>Nama: [Muhammad Rafi Dhiyaul Haq]</p>
+    <p>NIM: [22552011030]</p>
+    <p>Universitas: Universitas Teknologi Bandung</p>
+    <h2>Tanda Tangan Digital</h2>
+    <img src="[URL Tanda Tangan Digital]" alt="Tanda Tangan Digital">
+</body>
+</html>
 
